--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   permission_handler: ^12.0.1
   http: ^1.5.0
   geolocator: ^14.0.2
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +59,6 @@ dev_dependencies:
   hive_generator: ^2.0.1
   build_runner: ^2.4.0
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -72,6 +72,7 @@ flutter:
 
   assets:
     - assets/translations/
+    - .env
 
   # To add assets to your application, add an assets section, like this:
   # assets:
