--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http: ^1.5.0
   geolocator: ^14.0.2
   flutter_dotenv: ^5.2.1
+  flutter_timezone: ^4.1.1
 
 dev_dependencies:
   flutter_test:
