--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   geolocator: ^14.0.2
   flutter_dotenv: ^5.2.1
   flutter_timezone: ^4.1.1
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
